--- a/packages/api/jw/Codelijst iJw release 3.2
+++ b/packages/api/jw/Codelijst iJw release 3.2
@@ -28,34 +28,34 @@ Deze codelijst bevat de gestandaardiseerde codes, waarden en definities zoals ge
 
 
 ## COD002-VEKTIS: Berichtcode
-COD002-VEKTIS: Berichtcode is een data-element uit de Header van een bericht en dient conform de codelijst van Vektis ingevuld te worden. Bijvoorbeeld de Berichtcode van een WMO318 bericht is 481.  
-WMO301	414
+COD002-VEKTIS: Berichtcode is een data-element uit de Header van een bericht en dient conform de codelijst van Vektis ingevuld te worden. Bijvoorbeeld de Berichtcode van een JW318 bericht is 481.  
+JW301	414
 
-WMO302	415
+JW302	415
 
-WMO305	418
+JW305	418
 
-WMO306	419
+JW306	419
 
-WMO307	420
+JW307	420
 
-WMO308	421
+JW308	421
 
-WMO315	444
+JW315	444
 
-WMO316	445
+JW316	445
 
-WMO317	480
+JW317	480
 
-WMO318	481
+JW318	481
 
-WMO319	482
+JW319	482
 
-WMO320	483
+JW320	483
 
-WMO323	484
+JW323	484
 
-WMO325	485
+JW325	485
 
 ## COD032: Land
 
@@ -581,11 +581,11 @@ COD046: Geslacht - Unieke aanduiding van de sexe van een persoon.
 
 COD170: Datumgebruik - Codering om aan te geven welk deel van een datum onbekend is.
 
-1 - dag onbekend; alleen maand en jaar gebruiken
+1 - dag onbekend (alleen maand en jaar gebruiken)
 
-2 - dag en maand onbekend; alleen jaar gebruiken
+2 - dag en maand onbekend (alleen jaar gebruiken)
 
-3 - dag, maand en jaar onbekend; onbekende datum
+3 - dag, maand en jaar onbekend (onbekende datum)
 
 ## COD260: Ja of nee
 
@@ -879,9 +879,9 @@ WJ232: Juridische status - Juridische situatie die voor de client van toepassing
 
 12 - Strafrechterlijke justitiele contacten: overig
 
-## WJ756: Eenheid
+## Eenheid: WJ756
 
-WJ756: Eenheid - Gecodeerde aanduiding van de mate van zorg betreffende een product, uitgedrukt in een eenheid.
+Eenheid: WJ756 - Gecodeerde aanduiding van de mate van zorg betreffende een product, uitgedrukt in een eenheid.
 
 01 Minuut
 
@@ -1054,6 +1054,7 @@ WMO757: Frequentie - Frequentie van de te leveren of geleverde ondersteuning.
 4 - Per maand
 
 6 - Totaal binnen geldigheidsduur toewijzing
+
 
 
 
