Update Codelijst iJw release 3.2

--- a/packages/api/jw/Codelijst iJw release 3.2
+++ b/packages/api/jw/Codelijst iJw release 3.2
@@ -24,7 +24,7 @@ Deze codelijst bevat de gestandaardiseerde codes, waarden en definities zoals ge
 - Let op dat de codes niet altijd oplopend zijn; controleer dus altijd de hele lijst.
 - Gebruik geen interpretatie, geen samenvatting, geen afleiding uit context of eerdere antwoorden, maar toon uitsluitend de letterlijke tekst uit de codelijst.
 - code 14 van codelijst Eenheid is altijd "etmaal", nooit "dag", "dagdeel" of "uur"
-- bij vragen over eenheid of eenheden zoek naar WJ756
+- bij vragen over eenheid of eenheden zoek in de lijst naar codelijst WJ756
 
 
 ## COD002-VEKTIS: Berichtcode
@@ -879,9 +879,9 @@ WJ232: Juridische status - Juridische situatie die voor de client van toepassing
 
 12 - Strafrechterlijke justitiele contacten: overig
 
-## Eenheid: WJ756
+## WJ756: Eenheid
 
-Eenheid: WJ756 - Gecodeerde aanduiding van de mate van zorg betreffende een product, uitgedrukt in een eenheid.
+WJ756: Eenheid - Gecodeerde aanduiding van de mate van zorg betreffende een product, uitgedrukt in een eenheid.
 
 01 Minuut
 
@@ -1054,6 +1054,7 @@ WMO757: Frequentie - Frequentie van de te leveren of geleverde ondersteuning.
 4 - Per maand
 
 6 - Totaal binnen geldigheidsduur toewijzing
+
 
 
 
