--- a/packages/api/jw/Codelijst iJw release 3.2
+++ b/packages/api/jw/Codelijst iJw release 3.2
@@ -23,7 +23,7 @@ Deze codelijst bevat de gestandaardiseerde codes, waarden en definities zoals ge
 - Controleer of de waarde die je gebruikt, direct op dezelfde regel staat als de code.
 - Let op dat de codes niet altijd oplopend zijn; controleer dus altijd de hele lijst.
 - Gebruik geen interpretatie, geen samenvatting, geen afleiding uit context of eerdere antwoorden, maar toon uitsluitend de letterlijke tekst uit de codelijst.
-- code 14 van codelijst Eenheid is altijd "etmaal", nooit "dag", "dagdeel" of "uur"
+- code 14 van codelijst Eenheid heet altijd "etmaal", nooit "dag", "dagdeel" of "uur"
 - bij vragen over eenheid of eenheden zoek in de lijst naar codelijst WJ756
 
 
@@ -1054,6 +1054,7 @@ WMO757: Frequentie - Frequentie van de te leveren of geleverde ondersteuning.
 4 - Per maand
 
 6 - Totaal binnen geldigheidsduur toewijzing
+
 
 
 
