Update Codelijst iJw release 3.2

--- a/packages/api/jw/Codelijst iJw release 3.2
+++ b/packages/api/jw/Codelijst iJw release 3.2
@@ -18,7 +18,10 @@ Deze codelijst bevat de gestandaardiseerde codes, waarden en definities zoals ge
 - **Herkenning:** De lijst maakt het mogelijk om entiteiten, waarden, statussen, productcategorieën en codes in berichtenverkeer eenduidig te herkennen, te labelen en te koppelen aan betekenis.
 - **Verwijzingen:** Sommige codes verwijzen naar andere begrippen of toelichtingen.
 - **Afkortingen:** Afkortingen worden zoveel mogelijk volgens het gebruik in de iStandaarden opgenomen.
-- **Toepassing:** Voeg deze codelijst toe als context vóór het analyseren, zoeken of beantwoorden van vragen over berichten, registraties en processen binnen de Jeugdwet.
+- **Toepassing:** Voeg deze codelijst toe als context vóór het analyseren, zoeken of beantwoorden van vragen over  berichten, registraties en processen binnen de Jeugdwet.
+- Wanneer u in een instructieregel een notatie als ## COD002-VEKTIS: Berichtcode gebruikt, betekent dit:
+  COD002-VEKTIS = codelijstnummer (unieke sleutel, soms met bronvermelding)
+  Berichtcode = codelijstnaam (betekenis van de lijst)
 - Let op: lijstnamen, lijstcodes en codes zijn louter administratieve identifiers zonder hiërarchische betekenis. Behandel ze als unieke sleutels die uitsluitend gebruikt worden voor verwijzing, niet voor interpretatie.
 - Controleer of de waarde die je gebruikt, direct op dezelfde regel staat als de code.
 - Let op dat de codes niet altijd oplopend zijn; controleer dus altijd de hele lijst.
@@ -30,31 +33,18 @@ Deze codelijst bevat de gestandaardiseerde codes, waarden en definities zoals ge
 ## COD002-VEKTIS: Berichtcode
 COD002-VEKTIS: Berichtcode is een data-element uit de Header van een bericht en dient conform de codelijst van Vektis ingevuld te worden. Bijvoorbeeld de Berichtcode van een JW318 bericht is 481.  
 JW301	436
-
 JW302	437
-
 JW305	438
-
 JW306	439
-
 JW307	440
-
 JW308	441
-
 JW315	446
-
 JW316	447
-
 JW317	486
-
 JW318	487
-
 JW319	488
-
 JW320	489
-
 JW323	490
-
 JW325	491
 
 ## COD032: Land
@@ -1027,3 +1017,4 @@ WMO757: Frequentie - Frequentie van de te leveren of geleverde ondersteuning.
 4 - Per maand
 
 6 - Totaal binnen geldigheidsduur toewijzing
+
