--- a/packages/api/jw/Codelijsten iJw release 3.2
+++ b/packages/api/jw/Codelijsten iJw release 3.2
@@ -21,11 +21,9 @@ Deze codelijst bevat de gestandaardiseerde codes, waarden en definities zoals ge
 - **Toepassing:** Voeg deze codelijst toe als context vóór het analyseren, zoeken of beantwoorden van vragen over  berichten, registraties en processen binnen de Jeugdwet.
 - Let op: lijstnamen, lijstcodes en codes zijn louter administratieve identifiers zonder hiërarchische betekenis. Behandel ze als unieke sleutels die uitsluitend gebruikt worden voor verwijzing, niet voor interpretatie.
 - Controleer of de waarde die je gebruikt, direct op dezelfde regel staat als de code.
-- Let op dat de codes niet altijd oplopend zijn; controleer dus altijd de hele lijst.
+- Let op: dat de codes niet altijd oplopend zijn; controleer dus altijd de hele lijst.
+- Lees voor het beantwoorden van de vraag altijd eerst de gehele lijst.
 - Gebruik geen interpretatie, geen samenvatting, geen afleiding uit context of eerdere antwoorden, maar toon uitsluitend de letterlijke tekst uit de codelijst.
-- code 14 van codelijst Eenheid heet altijd "etmaal", nooit "dag", "dagdeel" of "uur"
-- bij vragen over eenheid of eenheden zoek in de lijst naar codelijst WJ756
-
 
 ## COD002-VEKTIS: Berichtcode
 COD002-VEKTIS: Berichtcode is een data-element uit de Header van een bericht en dient conform de codelijst van Vektis ingevuld te worden. Bijvoorbeeld de Berichtcode van een JW318 bericht is 481.  
@@ -1014,5 +1012,6 @@ WMO757: Frequentie - Frequentie van de te leveren of geleverde ondersteuning.
 4 - Per maand
 
 6 - Totaal binnen geldigheidsduur toewijzing
+
 
 
