Update Codelijsten iJw release 3.2

--- a/packages/api/jw/Codelijsten iJw release 3.2
+++ b/packages/api/jw/Codelijsten iJw release 3.2
@@ -847,9 +847,9 @@ WJ232: Juridische status - Juridische situatie die voor de client van toepassing
 
 05 - In bewaring stelling (ibs)
 
-11 - Strafrechterlijke justitiele contacten: tbs
+11 - Strafrechterlijke justitiele contacten (tbs)
 
-12 - Strafrechterlijke justitiele contacten: overig
+12 - Strafrechterlijke justitiele contacten (overig)
 
 ## WJ756: Eenheid
 WJ756: Eenheid - Gecodeerde aanduiding van de mate van zorg betreffende een product, uitgedrukt in een eenheid.
@@ -1012,6 +1012,7 @@ WMO757: Frequentie - Frequentie van de te leveren of geleverde ondersteuning.
 4 - Per maand
 
 6 - Totaal binnen geldigheidsduur toewijzing
+
 
 
 
