Update Codelijsten iJw release 3.2

--- a/packages/api/jw/Codelijsten iJw release 3.2
+++ b/packages/api/jw/Codelijsten iJw release 3.2
@@ -873,21 +873,13 @@ WJ758: Reden verzoek - Gecodeerde aanduiding voor de reden van een verzoek.
 WJ759: Reden afwijzing verzoek - Gecodeerde aanduiding voor de reden van afwijzing van een verzoek.
 
 1 - Geen wijziging, maar nieuwe aanvraag
-
 2 - Past niet binnen budget
-
 3 - Geen contract
-
 4 - Past niet binnen contract
-
 5 - Andere gemeente
-
 6 - Stapeling
-
 7 - Zorginhoudelijke afkeur
-
 8 - Woonplaatsbeginsel
-
 9 - Leeftijdsgrens is bereikt
 
 ## WJ760: Verzoek antwoord
@@ -901,31 +893,18 @@ WJ760: Verzoek antwoord - Gecodeerde aanduiding voor het antwoord op een verzoek
 JZ002: Reden wijziging toewijzing - De reden waarom een toewijzing wordt gewijzigd.
 
 01 - Administratieve correctie (vervallen)
-
 02 - Client overleden
-
 03 - Contractwijziging
-
 04 - Herbeoordeling: verlenging toewijzing
-
 05 - Herbeoordeling: verkorting toewijzing
-
 06 - Uitstroom naar ander domein
-
 07 - Verhuizing naar een andere gemeente
-
 08 - Wijziging leveringsvorm
-
 09 - Overstap naar andere aanbieder
-
 10 - Overgang naar nieuwe bekostigingssystematiek
-
 11 - Gemeentelijke herindeling
-
 12 - Geinitieerd door de aanbieder
-
 13 - Verwijderd
-
 14 - Administratieve correctie
 
 ## JZ020: Productcategorie
@@ -981,38 +960,22 @@ JZO020: Productcategorie - Gecodeerde aanduiding van een (reeks van) productcate
 JZ588: Reden beeindiging - De reden van beeindiging van de jeugdhulp bij een client.
 
 02 - Overlijden
-
-19 - Levering volgens plan beeindigd
-
 20 - Levering is tijdelijk beeindigd
-
-21 - Levering is eenzijdig door client beeindigd
-
-22 - Levering is eenzijdig door aanbieder beeindigd
-
-23 - Levering is in overeenstemming voortijdig beeindigd
-
-31 - Verhuizing naar een andere gemeente
-
+31 - Levering is volgens plan beeindigd.
+32 - Voortijdig afgesloten: eenzijdig door de client.
+33 - Voortijdig afgesloten: eenzijdig door de aanbieder.
+34 - Voortijdig afgesloten: in overeenstemming.
+35 - Voortijdig afgesloten: wegens externe omstandigheden
 36 - Geinitieerd door de gemeente
-
 37 - In verband met wijzigingsverzoek
-
 38 - Overstap naar andere aanbieder
-
 39 - Uitstroom naar ander domein
 
 ## WMO757: Frequentie
 WMO757: Frequentie - Frequentie van de te leveren of geleverde ondersteuning.
 
 1 - Per dag
-
 2 - Per week
-
 4 - Per maand
-
 6 - Totaal binnen geldigheidsduur toewijzing
-
-
-
 
