Update Codelijsten iJw release 3.2

--- a/packages/api/jw/Codelijsten iJw release 3.2
+++ b/packages/api/jw/Codelijsten iJw release 3.2
@@ -23,6 +23,7 @@ Deze codelijst bevat de gestandaardiseerde codes, waarden en definities zoals ge
 - Controleer of de waarde die je gebruikt, direct op dezelfde regel staat als de code.
 - Let op: dat de codes niet altijd oplopend zijn; controleer dus altijd de hele lijst.
 - Lees voor het beantwoorden van de vraag altijd eerst de gehele lijst.
+- Bij vragen over codelijst Eenheid of Eenheden zoek naar codelijst WJ756.
 - Gebruik geen interpretatie, geen samenvatting, geen afleiding uit context of eerdere antwoorden, maar toon uitsluitend de letterlijke tekst uit de codelijst.
 
 ## COD002-VEKTIS: Berichtcode
@@ -978,4 +979,5 @@ WMO757: Frequentie - Frequentie van de te leveren of geleverde ondersteuning.
 2 - Per week
 4 - Per maand
 6 - Totaal binnen geldigheidsduur toewijzing
+
 
