--- a/packages/api/jw/Codelijsten iJw release 3.2
+++ b/packages/api/jw/Codelijsten iJw release 3.2
@@ -23,8 +23,20 @@ Deze codelijst bevat de gestandaardiseerde codes, waarden en definities zoals ge
 - Controleer of de waarde die je gebruikt, direct op dezelfde regel staat als de code.
 - Let op: dat de codes niet altijd oplopend zijn; controleer dus altijd de hele lijst.
 - Lees voor het beantwoorden van de vraag altijd eerst de gehele lijst.
-- Bij vragen over codelijst Eenheid of Eenheden zoek naar codelijst WJ756.
 - Gebruik geen interpretatie, geen samenvatting, geen afleiding uit context of eerdere antwoorden, maar toon uitsluitend de letterlijke tekst uit de codelijst.
+
+Specifieke instructie voor AI-agenten
+- Berichtcode: Indien gevraagd wordt naar Berichtcode of berichtype, dient de AI altijd gebruik te maken van codelijst COD002-VEKTIS.
+- Land: Indien gevraagd wordt naar Land of Landen, dient de AI altijd gebruik te maken van codelijst COD032: Land.
+- debet/credit: Indien gevraagd wordt naar Debet of Credit, dient de AI altijd gebruik te maken van codelijst COD043: Indicatie debet/credit.
+- Eenheid / Eenheden: Indien gevraagd wordt naar Eenheid of Eenheden, dient de AI altijd gebruik te maken van codelijst WJ756: Eenheid.
+- Frequentie: Indien gevraagd wordt naar Frequentie, dient de AI altijd gebruik te maken van codelijst WMO757: Frequentie.
+- Reden verzoek: Indien gevraagd wordt naar Reden verzoek, dient de AI altijd gebruik te maken van codelijst WJ758: Reden verzoek.
+- Reden afwijzing verzoek: Indien gevraagd wordt naar Reden afwijzing verzoek, dient de AI altijd gebruik te maken van codelijst WJ759: Reden afwijzing verzoek.
+- Verzoek antwoord: Indien gevraagd wordt naar Verzoek antwoord, dient de AI altijd gebruik te maken van codelijst WJ760: Verzoek antwoord.
+- Reden Wijziging Toewijzing: Indien gevraagd wordt naar Reden Wijziging Toewijzing, dient de AI altijd gebruik te maken van codelijst JZ002: Reden Wijziging Toewijzing.
+- Productcategorie: Indien gevraagd wordt naar Productcategorie, dient de AI altijd gebruik te maken van codelijst JZ020: Productcategorie.
+
 
 ## COD002-VEKTIS: Berichtcode
 COD002-VEKTIS: Berichtcode is een data-element uit de Header van een bericht en dient conform de codelijst van Vektis ingevuld te worden. Bijvoorbeeld de Berichtcode van een JW318 bericht is 481.  
@@ -47,111 +59,58 @@ JW325	491
 COD032: Land - Identificatie van een (historisch/actueel) land of gebiedsdeel.
 
 AD - ANDORRA
-
 AE - VERENIGDE ARABISCHE EMIRATEN
-
 AF - AFGHANISTAN
-
 AG - ANTIGUA EN BARBUDA
-
 AI - ANGUILA
-
 AL - ALBANIE
-
 AM - ARMENIE
-
 AO - ANGOLA
-
 AQ - ANTARTICA
-
 AR - ARGENTINIE
-
 AS - AMERIKAANS-SAMOA
-
 AT - OOSTENRIJK
-
 AU - AUSTRALIE
-
 AW - ARUBA
-
 AX - ÅLANDSEILANDEN
-
 AZ - AZERBEIDZJAN
-
 BA - BOSNIE EN HERZEGOVINA
-
 BB - BARBADOS
-
 BD - BANGLADESH
-
 BE - BELGIE
-
 BF - BURKINA FASO
-
 BG - BULGARIJE
-
 BH - BAHREIN
-
 BI - BURUNDI
-
 BJ - BENIN
-
 BL - SAINT BARTHÉLEMY
-
 BM - BERMUDA
-
 BN - BRUNEI
-
 BO - BOLIVIA
-
 BQ - BONAIRE, SINT EUSTATIUS en SABA
-
 BR - BRAZILIE
-
 BS - BAHAMA'S
-
 BT - BHUTAN
-
 BV - BOUVET
-
 BW - BOTSWANA
-
 BY - WIT-RUSLAND
-
 BZ - BELIZE
-
 CA - CANADA
-
 CC - COCOSEILANDEN
-
 CD - CONGO-KINSHASA
-
 CF - CENTRAAL-AFRIKAANSE REPUBLIEK
-
 CG - CONGO-BRAZZAVILLE
-
 CH - ZWITSERLAND
-
 CI - IVOORKUST
-
 CK - COOKEILANDEN
-
 CL - CHILI
-
 CM - KAMEROEN
-
 CN - CHINA
-
 CO - COLOMBIA
-
 CR - COSTA RICA
-
 CU - CUBA
-
 CV - KAAPVERDIE
-
 CW - CURAÇAO
-
 CX - CHRISTMASEILAND
 
 CY - CYPRUS
@@ -548,7 +507,6 @@ ZW - ZIMBABWE
 COD043: Indicatie debet/credit - Gecodeerde aanduiding voor debet of credit in JW323
 
 C - Creditbedrag en aantal
-
 D - Debetbedrag en aantal
 
 ## COD046: Geslacht
@@ -979,5 +937,6 @@ WMO757: Frequentie - Frequentie van de te leveren of geleverde ondersteuning.
 2 - Per week
 4 - Per maand
 6 - Totaal binnen geldigheidsduur toewijzing
+
 
 
