Update Codelijsten iJw release 3.2

--- a/packages/api/jw/Codelijsten iJw release 3.2
+++ b/packages/api/jw/Codelijsten iJw release 3.2
@@ -36,6 +36,8 @@ Specifieke instructie voor AI-agenten
 - Verzoek antwoord: Indien gevraagd wordt naar Verzoek antwoord, dient de AI altijd gebruik te maken van codelijst WJ760: Verzoek antwoord.
 - Reden Wijziging Toewijzing: Indien gevraagd wordt naar Reden Wijziging Toewijzing, dient de AI altijd gebruik te maken van codelijst JZ002: Reden Wijziging Toewijzing.
 - Productcategorie: Indien gevraagd wordt naar Productcategorie, dient de AI altijd gebruik te maken van codelijst JZ020: Productcategorie.
+- Reden beeindiging: Indien gevraagd wordt naar Reden beeindiging, dient de AI altijd gebruik te maken van codelijst JZ588: Reden beeindiging
+- Wettelijke vertegenwoordiging: Indien gevraagd wordt naar Wettelijke vertegenwoordiging, dient de AI altijd gebruik te maken van codelijst WJ003: Wettelijke vertegenwoordiging.
 
 ## WJ756: Eenheid
 WJ756: Eenheid - Gecodeerde aanduiding van de mate van zorg betreffende een product, uitgedrukt in een eenheid.
@@ -936,6 +938,7 @@ WMO757: Frequentie - Frequentie van de te leveren of geleverde ondersteuning.
 2 - Per week
 4 - Per maand
 6 - Totaal binnen geldigheidsduur toewijzing
+
 
 
 
