Update Codelijsten iJw release 3.2

--- a/packages/api/jw/Codelijsten iJw release 3.2
+++ b/packages/api/jw/Codelijsten iJw release 3.2
@@ -31,13 +31,14 @@ Specifieke instructie voor AI-agenten
 - debet/credit: Indien gevraagd wordt naar Debet of Credit, dient de AI altijd gebruik te maken van codelijst COD043: Indicatie debet/credit.
 - Eenheid / Eenheden: Indien gevraagd wordt naar Eenheid of Eenheden, dient de AI altijd gebruik te maken van codelijst WJ756: Eenheid.
 - Frequentie: Indien gevraagd wordt naar Frequentie, dient de AI altijd gebruik te maken van codelijst WMO757: Frequentie.
-- Reden verzoek: Indien gevraagd wordt naar Reden verzoek, dient de AI altijd gebruik te maken van codelijst WJ758: Reden verzoek.
-- Reden afwijzing verzoek: Indien gevraagd wordt naar Reden afwijzing verzoek, dient de AI altijd gebruik te maken van codelijst WJ759: Reden afwijzing verzoek.
-- Verzoek antwoord: Indien gevraagd wordt naar Verzoek antwoord, dient de AI altijd gebruik te maken van codelijst WJ760: Verzoek antwoord.
-- Reden Wijziging Toewijzing: Indien gevraagd wordt naar Reden Wijziging Toewijzing, dient de AI altijd gebruik te maken van codelijst JZ002: Reden Wijziging Toewijzing.
-- Productcategorie: Indien gevraagd wordt naar Productcategorie, dient de AI altijd gebruik te maken van codelijst JZ020: Productcategorie.
+- Reden verzoek: Indien gevraagd wordt naar Reden verzoek, dient de AI altijd gebruik te maken van codelijst WJ758: Reden verzoek, zoek WJ758: Reden verzoek
+- Reden afwijzing verzoek: Indien gevraagd wordt naar Reden afwijzing verzoek, dient de AI altijd gebruik te maken van codelijst WJ759: Reden afwijzing verzoek
+- Verzoek antwoord: Indien gevraagd wordt naar Verzoek antwoord, dient de AI altijd gebruik te maken van codelijst WJ760: Verzoek antwoord
+- Reden Wijziging Toewijzing: Indien gevraagd wordt naar Reden Wijziging Toewijzing, dient de AI altijd gebruik te maken van codelijst JZ002: Reden Wijziging Toewijzing
+- Productcategorie: Indien gevraagd wordt naar Productcategorie, dient de AI altijd gebruik te maken van codelijst JZ020: Productcategorie
 - Reden beeindiging: Indien gevraagd wordt naar Reden beeindiging, dient de AI altijd gebruik te maken van codelijst JZ588: Reden beeindiging
-- Wettelijke vertegenwoordiging: Indien gevraagd wordt naar Wettelijke vertegenwoordiging, dient de AI altijd gebruik te maken van codelijst WJ003: Wettelijke vertegenwoordiging.
+- Wettelijke vertegenwoordiging: Indien gevraagd wordt naar "Wettelijke vertegenwoordiging", dient de AI altijd gebruik te maken van codelijst WJ003: Wettelijke vertegenwoordiging
+- Juridische status: Indien gevraagd wordt naar Juridische status, dient de AI altijd gebruik te maken van codelijst WJ232: Juridische status
 
 ## WJ756: Eenheid
 WJ756: Eenheid - Gecodeerde aanduiding van de mate van zorg betreffende een product, uitgedrukt in een eenheid.
@@ -124,37 +125,21 @@ CU - CUBA
 CV - KAAPVERDIE
 CW - CURAÇAO
 CX - CHRISTMASEILAND
-
 CY - CYPRUS
-
 CZ - TSJECHIE
-
 DE - DUITSLAND
-
 DJ - DJIBOUTI
-
 DK - DENEMARKEN
-
 DM - DOMINICA
-
 DO - DOMINICAANSE REPUBLIEK
-
 DZ - ALGERIJE
-
 EC - ECUADOR
-
 EE - ESTLAND
-
 EG - EGYPTE
-
 EH - WESTELIJKE SAHARA
-
 ER - ERITREA
-
 ES - SPANJE
-
 ET - ETHIOPIE
-
 FI - FINLAND
 
 FJ - FIJI
@@ -904,6 +889,7 @@ WMO757: Frequentie - Frequentie van de te leveren of geleverde ondersteuning.
 2 - Per week
 4 - Per maand
 6 - Totaal binnen geldigheidsduur toewijzing
+
 
 
 
