Update Codelijsten iJw release 3.2

--- a/packages/api/jw/Codelijsten iJw release 3.2
+++ b/packages/api/jw/Codelijsten iJw release 3.2
@@ -141,363 +141,184 @@ ER - ERITREA
 ES - SPANJE
 ET - ETHIOPIE
 FI - FINLAND
-
 FJ - FIJI
-
 FK - FALKLANDEILANDEN
-
 FM - MICRONESIA
-
 FO - FAERÖER
-
 FR - FRANKRIJK
-
 GA - GABON
-
 GB - VERENIGD KONINKRIJK
-
 GD - GRENADA
-
 GE - GEORGIE
-
 GF - FRANS-GUYANA
-
 GG - GUERNSEY
-
 GH - GHANA
-
 GI - GIBRALTAR
-
 GL - GROENLAND
-
 GM - GAMBIA
-
 GN - GUINEA
-
 GP - GUADELOUPE
-
 GQ - EQUATORIAAL-GUINEA
-
 GR - GRIEKENLAND
-
 GS - ZUID-GEORGIE EN DE ZUIDELIJKE SANDWICHEILANDEN
-
 GT - GUATEMALA
-
 GU - GUAM
-
 GW - GUINEE-BISSAU
-
 GY - GUYANA
-
 HK - HONGKONG
-
 HM - HEARD EN MCDONALDEILANDEN
-
 HN - HONDURAS
-
 HR - KROATIE
-
 HT - HAÏTI
-
 HU - HONGARIJE
-
 ID - INDONESIE
-
 IE - IERLAND
-
 IL - ISRAEL
-
 IM - ISLE OF MAN
-
 IN - INDIA
-
 IO - BRITS TERRITORIUM IN DE INDISCHE OCEAAN
-
 IQ - IRAK
-
 IR - IRAN
-
 IS - IJSLAND
-
 IT - ITALIE
-
 JE - JERSEY
-
 JM - JAMAICA
-
 JO - JORDANIE
-
 JP - JAPAN
-
 KE - KENIA
-
 KG - KIRGIZIE
-
 KH - CAMBODJA
-
 KI - KIRIBATI
-
 KM - COMOREN
-
 KN - SAINT KITTS EN NEVIS
-
 KP - NOORD-KOREA
-
 KR - ZUID-KOREA
-
 KW - KOEWEIT
-
 KY - CAYMANEILANDEN
-
 KZ - KAZACHSTAN
-
 LA - LAOS
-
 LB - LIBANON
-
 LC - SAINT LUCIA
-
 LI - LIECHTENSTEIN
-
 LK - SRI LANKA
-
 LR - LIBERIA
-
 LS - LESOTHO
-
 LT - LITOUWEN
-
 LU - LUXEMBURG
-
 LV - LETLAND
-
 LY - LIBIE
-
 MA - MAROKKO
-
 MC - MONACO
-
 MD - MOLDAVIE
-
 ME - MONTENEGRO
-
 MF - SAINT MARTIN
-
 MG - MADAGASKAR
-
 MH - MARSHALLEILANDEN
-
 MK - MACEDONIE
-
 ML - MALI
-
 MM - MYANMAR
-
 MN - MONGOLIE
-
 MO - MACAU
-
 MP - NOORDELIJKE MARIANEN
-
 MQ - MARTINIQUE
-
 MR - MAURITANIE
-
 MS - MONTSERRAT
-
 MT - MALTA
-
 MU - MAURITIUS
-
 MV - MALDIVEN
-
 MW - MALAWI
-
 MX - MEXICO
-
 MY - MALEISIE
-
 MZ - MOZAMBIQUE
-
-nan - NAMIBIE
-
+NA - NAMIBIE
 NC - NIEUW-CALEDONIE
-
 NE - NIGER
-
 NF - NORFOLK
-
 NG - NIGERIA
-
 NI - NICARAGUA
-
 NL - NEDERLAND
-
 NO - NOORWEGEN
-
 NP - NEPAL
-
 NR - NAURU
-
 NU - NIUE
-
 NZ - NIEUW-ZEELAND
-
 OM - OMAN
-
 PA - PANAMA
-
 PE - PERU
-
 PF - FRANS-POLYNESIE
-
 PG - PAPOEA-NIEUW-GUINEA
-
 PH - FILIPIJNEN
-
 PK - PAKISTAN
-
 PL - POLEN
-
 PM - SAINT-PIERRE EN MIQUELON
-
 PN - PITCAIRNEILANDEN
-
 PR - PUERTO RICO
-
 PS - PALESTIJNSE AUTORITEIT
-
 PT - PORTUGAL
-
 PW - PALAU
-
 PY - PARAGUAY
-
 QA - QATAR
-
 RE - RÉUNION
-
 RO - ROEMENIE
-
 RS - SERVIE
-
 RU - RUSLAND
-
 RW - RWANDA
-
 SA - SAOEDI-ARABIE
-
 SB - SALOMONSEILANDEN
-
 SC - SEYCHELLEN
-
 SD - SOEDAN
-
 SE - ZWEDEN
-
 SG - SINGAPORE
-
 SH - SINT-HELENA
-
 SI - SLOVENIE
-
 SJ - SPITSBERGEN EN JAN MAYEN
-
 SK - SLOWAKIJE
-
 SL - SIERRA LEONE
-
 SM - SAN MARINO
-
 SN - SENEGAL
-
 SO - SOMALIE
-
 SR - SURINAME
-
 SS - ZUID SOEDAN
-
 ST - SAO TOMÉ EN PRINCIPE
-
 SV - EL SALVADOR
-
 SX - SINT MAARTEN (Nederlands deel)
-
 SY - SYRIE
-
 SZ - SWAZILAND
-
 TC - TURKS- EN CAICOSEILANDEN
-
 TD - TSJAAD
-
 TF - FRANSE ZUIDELIJKE EN ANTARCTISCHE GEBIEDEN
-
 TG - TOGO
-
 TH - THAILAND
-
 TJ - TADZJIKISTAN
-
 TK - TOKELAU
-
 TL - OOST-TIMOR
-
 TM - TURKMENISTAN
-
 TN - TUNESIE
-
 TO - TONGA
-
 TR - TURKIJE
-
 TT - TRINIDAD EN TOBAGO
-
 TV - TUVALU
-
 TW - TAIWAN
-
 TZ - TANZANIA
-
 UA - OEKRAINE
-
 UG - OEGANDA
-
 UM - KLEINE PACIFISCHE EILANDEN VAN DE VERENIGDE STATEN
-
 US - VERENIGDE STATEN
-
 UY - URUGUAY
-
 UZ - OEZBEKISTAN
-
 VA - VATICAANSTAD
-
 VC - SAINT VINCENT EN DE GRENADINES
-
 VE - VENEZUELA
-
 VG - BRITSE MAAGDENEILANDEN
-
 VI - AMERIKAANSE MAAGDENEILANDEN
-
 VN - VIETNAM
-
 VU - VANUATU
-
 WF - WALLIS EN FUTUNA
-
 WS - SAMOA
-
 YE - JEMEN
-
 YT - MAYOTTE
-
 ZA - ZUID-AFRIKA
-
 ZM - ZAMBIA
-
 ZW - ZIMBABWE
 
 ## COD043: Indicatie debet/credit
@@ -510,150 +331,99 @@ D - Debetbedrag en aantal
 COD046: Geslacht - Unieke aanduiding van de sexe van een persoon.
 
 0 - Onbekend
-
 1 - Mannelijk
-
 2 - Vrouwelijk
 
 ## COD170: Datumgebruik
-
 COD170: Datumgebruik - Codering om aan te geven welk deel van een datum onbekend is.
 
 1 - dag onbekend (alleen maand en jaar gebruiken)
-
 2 - dag en maand onbekend (alleen jaar gebruiken)
-
 3 - dag, maand en jaar onbekend (onbekende datum)
 
 ## COD260: Ja of nee
 COD260: Ja of nee - Codering voor ja of nee.
 
 1 - Ja
-
 2 - Nee
 
 ## COD327: Code verwijzer
 COD327: Code verwijzer - Aanduiding van de aard van de (zelf)verwijzer.
 
 01 - Gemeente
-
 02 - Huisarts
-
 03 - Jeugdarts
-
 04 - Gecertificeerde instelling
-
 05 - Medisch specialist
-
 06 - Zelfverwijzer/geen verwijzer
-
 08 - Rechter, Officier van Justitie, functionaris Justitiële jeugdinrichting
 
 ## COD467: Status aanlevering
 COD467: Status aanlevering - Indicatie over de status van de informatie in de berichtklasse.
 
 1 - Eerste aanlevering
-
 2 - Gewijzigde aanlevering
-
 3 - Verwijderen aanlevering
-
 9 - Niet van toepassing (ongewijzigd)
 
 ## COD472: Soort relatie
 COD472: Soort relatie - De soort relatie die een persoon ten opzichte van de client heeft.
 
 03 - Curator (juridisch)
-
 04 - Financieel (gemachtigd)
-
 05 - Financieel (toetsing)
-
 06 - Leefeenheid
-
 07 - Hulpverlener
-
 08 - Specialist
-
 09 - Anders
-
 10 - Ouder
-
 11 - Voogd
-
 12 - Partner/echtgeno(o)t(e)
-
 13 - Pleegouder
-
 14 - Bewindvoerder
-
 15 - Mentor
-
 16 - Zoon/dochter
-
 17 - Familielid
-
 18 - Gezinslid
-
 19 - Buur
-
 20 - Vriend(in)/kennis
-
 21 - Clientondersteuner
-
 22 - Huisarts
-
 23 - Erven van
-
 24 - Werkgever
-
 25 - Wijkcoach
 
 ## COD700: Naamgebruik
 COD700: Naamgebruik - Aanduiding naamgebruik (gecodeerd).
 
 1 - Eigen naam
-
 2 - Naam echtgenoot of geregistreerd partner of alternatieve naam
-
 3 - Naam echtgenoot of geregistreerd partner gevolgd door eigen naam
-
 4 - Eigen naam gevolgd door naam echtgenoot of geregistreerd partner
-
 5 - Pseudoniem
-
 6 - Niet-natuurlijk persoon
 
 ## COD747: Communicatievorm
 COD747: Communicatievorm - Gecodeerde aanduiding van de bijzondere vorm van communicatie die gebruikt dient te worden.
 
 1 - Tolk taal
-
 2 - Doventolk
-
 3 - Doofblindentolk
 
 ## COD757: Soort adres
 COD757: Soort adres - Nadere typering van het adres.
 
 01 - BRP-adres
-
 02 - Correspondentie-adres
-
 03 - Verblijfadres
-
 04 - Tijdelijk verblijfadres
 
 ## NUM061: Aanduiding woonadres
-
 NUM061: Aanduiding woonadres - De aanduiding die wordt gebruikt voor adressen die niet zijn voorzien van de gebruikelijke straatnaam en huisnummeraanduidingen.
 
 AB - Aan boord
-
 BY - Bij
-
 TO - Tegenover
-
 WW - Woonwagen
 
 ## WJ001: Retourcode
@@ -889,6 +659,7 @@ WMO757: Frequentie - Frequentie van de te leveren of geleverde ondersteuning.
 2 - Per week
 4 - Per maand
 6 - Totaal binnen geldigheidsduur toewijzing
+
 
 
 
