Update Codelijsten iJw release 3.2

--- a/packages/api/jw/Codelijsten iJw release 3.2
+++ b/packages/api/jw/Codelijsten iJw release 3.2
@@ -37,7 +37,7 @@ Specifieke instructie voor AI-agenten
 - Reden Wijziging Toewijzing: Indien gevraagd wordt naar Reden Wijziging Toewijzing, dient de AI altijd gebruik te maken van codelijst JZ002: Reden Wijziging Toewijzing
 - Productcategorie: Indien gevraagd wordt naar Productcategorie, dient de AI altijd gebruik te maken van codelijst JZ020: Productcategorie
 - Reden beeindiging: Indien gevraagd wordt naar Reden beeindiging, dient de AI altijd gebruik te maken van codelijst JZ588: Reden beeindiging
-- Wettelijke vertegenwoordiging: Indien gevraagd wordt naar "Wettelijke vertegenwoordiging", dient de AI altijd gebruik te maken van codelijst WJ003: Wettelijke vertegenwoordiging
+- Wettelijke vertegenwoordiging: Indien gevraagd wordt naar Wettelijke vertegenwoordiging, dient de AI altijd gebruik te maken van codelijst WJ003: Wettelijke vertegenwoordiging
 - Juridische status: Indien gevraagd wordt naar Juridische status, dient de AI altijd gebruik te maken van codelijst WJ232: Juridische status
 
 ## WJ756: Eenheid
@@ -659,11 +659,3 @@ WMO757: Frequentie - Frequentie van de te leveren of geleverde ondersteuning.
 2 - Per week
 4 - Per maand
 6 - Totaal binnen geldigheidsduur toewijzing
-
-
-
-
-
-
-
-
