--- a/packages/api/jw/Codelijsten iJw release 3.2
+++ b/packages/api/jw/Codelijsten iJw release 3.2
@@ -26,6 +26,7 @@ Deze codelijst bevat de gestandaardiseerde codes, waarden en definities zoals ge
 - Gebruik geen interpretatie, geen samenvatting, geen afleiding uit context of eerdere antwoorden, maar toon uitsluitend de letterlijke tekst uit de codelijst.
 
 Specifieke instructie voor AI-agenten
+- Voordat je gaat zoeken, lees dit document van begin tot eind.
 - Berichtcode: Indien gevraagd wordt naar Berichtcode of berichtype, dient de AI altijd gebruik te maken van codelijst COD002-VEKTIS.
 - Land: Indien gevraagd wordt naar Land of Landen, dient de AI altijd gebruik te maken van codelijst COD032: Land.
 - debet/credit: Indien gevraagd wordt naar Debet of Credit, dient de AI altijd gebruik te maken van codelijst COD043: Indicatie debet/credit.
@@ -662,4 +663,5 @@ WMO757: Frequentie - Frequentie van de te leveren of geleverde ondersteuning.
 2 - Per week
 4 - Per maand
 6 - Totaal binnen geldigheidsduur toewijzing
+
 
