Update Codelijsten iJw release 3.2

--- a/packages/api/jw/Codelijsten iJw release 3.2
+++ b/packages/api/jw/Codelijsten iJw release 3.2
@@ -26,7 +26,7 @@ Deze codelijst bevat de gestandaardiseerde codes, waarden en definities zoals ge
 - Gebruik geen interpretatie, geen samenvatting, geen afleiding uit context of eerdere antwoorden, maar toon uitsluitend de letterlijke tekst uit de codelijst.
 
 Specifieke instructie voor AI-agenten
-- Voordat je gaat zoeken, lees dit document van begin tot eind.
+- Voordat je gaat zoeken, lees dit document van begin tot eind. Dit geldt voor elke zoekopdracht.
 - Berichtcode: Indien gevraagd wordt naar Berichtcode of berichtype, dient de AI altijd gebruik te maken van codelijst COD002-VEKTIS.
 - Land: Indien gevraagd wordt naar Land of Landen, dient de AI altijd gebruik te maken van codelijst COD032: Land.
 - debet/credit: Indien gevraagd wordt naar Debet of Credit, dient de AI altijd gebruik te maken van codelijst COD043: Indicatie debet/credit.
@@ -434,121 +434,63 @@ WW - Woonwagen
 WJ001: Retourcode - Melding in een retourbericht. Het betreft een code die in een retourbericht het resultaat van de beoordeling van een (deel van een) ontvangen bericht weergeeft.
 
 0001 - Bericht is afgekeurd om technische redenen.
-
 0200 - Geen opmerking over deze berichtklasse.
-
 0233 - Berichtklasse is niet beoordeeld.
-
 0611 - Het ingediende tarief komt niet overeen met het contractuele tarief
-
 8001 - Declaratie is volledig toegewezen.
-
 8017 - Van deze credit prestatie is geen debet prestatie bekend.
-
 8021 - Referentienummer prestatie is reeds aangeleverd.
-
 8187 - De prestatie hoort niet bij deze client.
-
 8214 - DeclaratiePeriode is niet de kalendermaand die volgt op voorgaande DeclaratiePeriode terwijl iedere declaratieperiode zorg geleverd is.
-
 8848 - Dagtekening moet gelijk zijn aan of voor de systeemdatum liggen.
-
 9019 - Het regie bericht kan niet gekoppeld worden aan een toewijzing.
-
 9056 - Identificatie moet per berichtsoort uniek zijn voor de verzendende partij.
-
 9063 - Het bericht kan niet verwerkt worden omdat geen eerder bericht ontvangen is.
-
 9069 - Er is geen actueel startbericht met dezelfde sleutel.
-
 9071 - Het eerdere start bericht kan niet verwijderd worden omdat de zorg al beeindigd is
-
 9074 - Er is al een eerder bericht ontvangen met dezelfde sleutel.
-
 9307 - Begindatum prestatie ligt niet tussen de ingangsdatum en einddatum toewijzing
-
 9308 - Einddatum prestatie ligt niet tussen de ingangsdatum en einddatum toewijzing
-
 9319 - De ProductPeriode valt niet geheel binnen een DeclaratiePeriode.
-
 9321 - Het ingediende volume overschrijdt het toegewezen volume.
-
 9322 - De som van de ingediende volumes overschrijdt het  toegewezen volume
-
 9326 - De actuele levering is nog niet gestopt met een Stopbericht.
-
 9332 - Toewijzing heeft geen uniek nummer binnen wettelijk domein.
-
 9333 - Declaratienummer is niet uniek
-
 9338 - Niet iedere prestatie in een declaratiebericht is gerelateerd aan een toegewezen product op basis van het toewijzingnummer
-
 9339 - ProductCategorie in de prestatie is niet gelijk aan ProductCategorie in het ToegewezenProduct.
-
 9340 - ProductCode in de Prestatie is niet gelijk aan ProductCode in het ToegewezenProduct.
-
 9341 - Eenheid in de Prestatie past niet bij Eenheid in het ToegewezenProduct
-
 9346 - Eenheid is ongelijk is aan waarde 83 (Euro's), maar IngediendBedrag is niet gelijk aan GeleverdVolume vermenigvuldigd met (het onafgeronde) ProductTarief.
-
 9347 - ReferentieAanbieder is niet uniek voor de aanbieder binnen het wettelijk domein
-
 9349 - Het VOW bericht bevat niet alle actuele toegewezen producten van de cliënt, hetzij in OngewijzigdProduct, hetzij in TeWijzigenProduct
-
 9350 - OngewijzigdProduct is niet gerelateerd aan een actueel toegewezen product op basis van het toewijzingnummer.
-
 9351 - TeWijzigenProduct is niet gerelateerd aan een actuele toewijzing op basis van ToewijzingNummer.
-
 9355 - ReferentieAanbieder in het antwoordbericht komt niet voor in een eerder verzoek om toewijzing of verzoek om wijziging
-
 9357 - GewensteIngangsdatum is kleiner dan of gelijk aan de dagtekening, maar niet gelijk aan de ingangsdatum van het originele ToegewezenProduct.
-
 9359 - Er is al een toewijzing gestuurd met deze ReferentieAanbieder.
-
 9360 - Er is al een antwoordbericht met deze ReferentieAanbieder, terwijl antwoordbericht in VerzoekAntwoord waarde 2 (aanvraag in onderzoek) heeft.
-
 9361 - Het product komt vaker voor met overlappende zorgperiodes.
-
 9365 - Er is al een antwoordbericht met dezelfde ReferentieAanbieder waar VerzoekAntwoord niet de waarde 'Aanvraag in onderzoek' heeft.
-
 9366 - ProductReferentie komt niet voor in een Declaratiebericht
-
 9367 - De waarde komt niet overeen met de waarde uit heenbericht met gelijke ProductReferentie
-
 9369 - Budget is meegegeven, maar de som van GeleverdVolume in alle ingediende Prestaties passen niet binnen het toegewezen Budget.
-
 9373 - Budget is gewijzigd, maar GewensteIngangsdatum is niet gelijk aan die in de actuele toewijzing
-
 9374 - Er is al een verzoek onderhanden.
-
 9375 - Omvang is gevuld, terwijl Product in toewijzing met ToewijzingNummer leeg is en Einddatum groter dan 31-12-2020 of leeg is
-
 9379 - ReferentieAanbieder refereert niet naar een verzoek om toewijzing of verzoek om wijziging, is onterecht gevuld
-
 9384 - Declaratie op toewijzing met RedenWijziging "13" (Verwijderd)
-
 9385 - Toewijzing heeft goedgekeurde declaratieregels
-
 9387 - Begindatum van de ProductPeriode is niet eerste dag van de kalendermaand waarop ProductPeriode betrekking heeft en Ingangsdatum van de toewijzing ligt niet later in deze betreffende maand
-
 9388 - Einddatum van de ProductPeriode is niet laatste dag van de kalendermaand waarop ProductPeriode betrekking heeft en Einddatum van de toewijzing ligt niet eerder in deze betreffende maand.
-
 9389 - Deze prestatie heeft een debetprestatie zonder bijbehorende creditprestatie
-
 9390 - Er is al een Prestatie met gelijk ProductReferentie met waarde Credit
-
 9411 - Omvang is leeg, terwijl Code in Product bij de toewijzing met ToewijzingNummer gevuld is.
-
 9412 - Omvang is niet leeg, terwijl Code in Product bij de toewijzing met ToewijzingNummer leeg is en einddatum groter dan 31-12-2020 of leeg is
-
 9413 - StatusAanlevering is waarde 1 of 2 en RedenBeeindiging heeft waarde 20, terwijl er al een ander StopProduct met hetzelfde Bsn, ToewijzingNummer, Begindatum en RedenBeeindiging waarde 20 is.
-
 9414 - Einddatum is niet >= aan Einddatum uit actuele StopProduct met gelijk Bsn, ToewijzingNummer en Begindatum
-
 9415 -  Er is al een StopProduct met gelijk Bsn, ToewijzingNummer, Begindatum en RedenBeeindiging <> waarde 20 en StatusAanlevering heeft waarde 1 of 2.
-
 S300 - Gemeentecode komt niet voor in de lijst van CBS.
-
 S329 - ProductCode hoort niet bij de ProductCategorie.
 
 ## WJ003: Wettelijke vertegenwoordiging
@@ -663,5 +605,6 @@ WMO757: Frequentie - Frequentie van de te leveren of geleverde ondersteuning.
 2 - Per week
 4 - Per maand
 6 - Totaal binnen geldigheidsduur toewijzing
+
 
 
