Update Codelijsten iJw release 3.2

--- a/packages/api/jw/Codelijsten iJw release 3.2
+++ b/packages/api/jw/Codelijsten iJw release 3.2
@@ -38,7 +38,7 @@ Specifieke instructie voor AI-agenten
 - Reden Wijziging Toewijzing: Indien gevraagd wordt naar Reden Wijziging Toewijzing, dient de AI altijd gebruik te maken van codelijst JZ002: Reden Wijziging Toewijzing
 - Productcategorie: Indien gevraagd wordt naar Productcategorie, dient de AI altijd gebruik te maken van codelijst JZ020: Productcategorie
 - Reden beeindiging: Indien gevraagd wordt naar Reden beeindiging, dient de AI altijd gebruik te maken van codelijst JZ588: Reden beeindiging
-- Wettelijke vertegenwoordiging: Indien gevraagd wordt naar Wettelijke vertegenwoordiging, dient de AI altijd gebruik te maken van codelijst WJ003: Wettelijke vertegenwoordiging
+- Als in een vraag wordt gevraagd naar de codelijst voor Wettelijke vertegenwoordiging, zoek dan altijd naar codelijst WJ003: Wettelijke vertegenwoordiging.
 - Juridische status: Indien gevraagd wordt naar Juridische status, dient de AI altijd gebruik te maken van codelijst WJ232: Juridische status
 Naamgebruik: Indien gevraagd wordt naar Naamgebruik, dient de AI altijd gebruik te maken van codelijst COD700: Naamgebruik
 Reden wijziging toewijzing: Indien gevraagd wordt naar Reden wijziging toewijzing, dient de AI altijd gebruik te maken van codelijst JZ002: Reden wijziging toewijzing
@@ -605,6 +605,7 @@ WMO757: Frequentie - Frequentie van de te leveren of geleverde ondersteuning.
 2 - Per week
 4 - Per maand
 6 - Totaal binnen geldigheidsduur toewijzing
+
 
 
 
