Update Codelijsten iJw release 3.2

--- a/packages/api/jw/Codelijsten iJw release 3.2
+++ b/packages/api/jw/Codelijsten iJw release 3.2
@@ -15,7 +15,7 @@ Deze codelijst bevat de gestandaardiseerde codes, waarden en definities zoals ge
 
 ### Belangrijk voor AI-agenten
 
-- **Herkenning:** De lijst maakt het mogelijk om entiteiten, waarden, statussen, productcategorieën en codes in berichtenverkeer eenduidig te herkennen, te labelen en te koppelen aan betekenis.
+- **Herkenning:** De lijst maakt het mogelijk om entiteiten, waarden, statussen, productcategorieen en codes in berichtenverkeer eenduidig te herkennen, te labelen en te koppelen aan betekenis.
 - **Verwijzingen:** Sommige codes verwijzen naar andere begrippen of toelichtingen.
 - **Afkortingen:** Afkortingen worden zoveel mogelijk volgens het gebruik in de iStandaarden opgenomen.
 - **Toepassing:** Voeg deze codelijst toe als context vóór het analyseren, zoeken of beantwoorden van vragen over  berichten, registraties en processen binnen de Jeugdwet.
@@ -605,6 +605,7 @@ WMO757: Frequentie - Frequentie van de te leveren of geleverde ondersteuning.
 2 - Per week
 4 - Per maand
 6 - Totaal binnen geldigheidsduur toewijzing
+
 
 
 
