Update Codelijsten iJw release 3.2

--- a/packages/api/jw/Codelijsten iJw release 3.2
+++ b/packages/api/jw/Codelijsten iJw release 3.2
@@ -559,6 +559,7 @@ JZ002: Reden wijziging toewijzing - De reden waarom een toewijzing wordt gewijzi
 ## JZ020: Productcategorie
 JZO020: Productcategorie - Gecodeerde aanduiding van een (reeks van) productcategorie(en) in functionele termen die losgekoppeld is van een bepaalde leverancier, waarbij wordt beschreven wat de inhoud en aard van de productcategorie is in termen van hulpverlening (wonen, zorg en welzijn).
 
+31 - (2015) Zonder verblijf: uitgevoerd door wijk- of buurtteam
 32 - (2015) Zonder verblijf: ambulante jeugdhulp op locatie van de aanbieder
 33 - (2015) Zonder verblijf: daghulp op locatie van de aanbieder
 34 - (2015) Zonder verblijf: jeugdhulp in het netwerk van de jeugdige
@@ -605,6 +606,7 @@ WMO757: Frequentie - Frequentie van de te leveren of geleverde ondersteuning.
 2 - Per week
 4 - Per maand
 6 - Totaal binnen geldigheidsduur toewijzing
+
 
 
 
